Prevents the 'Server Info' on the admin screen from stretching over screen width.

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -27,3 +27,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+code {
+  overflow-x: scroll;
+}
